Bare bones start of html
Some sectioning completed in html, and a bit of css to help start with resume.

--- a/Lab 1/styles.css
+++ b/Lab 1/styles.css
@@ -1,8 +1,20 @@
 :root {
   /* color palette */
-  --dark-color: #1a2139;
-  --neutral-dark-color: #333e5b;
-  --neutral-color: #798190;
-  --neutral-light-color: #9d9683;
-  --light-color: #821122;
+   --dark-color: #1a2139;
+   --neutral-dark-color: #333e5b;
+   --neutral-color: #798190;
+   --neutral-light-color: #9d9683;
+   --light-color: #821122;
+}
+
+/* connor resume css */
+
+#basic-info {
+
+}
+
+#resume img{
+   display: block;
+   width: 50%;
+   float: right;
 }
