--- a/Lab 1/styles.css
+++ b/Lab 1/styles.css
@@ -66,7 +66,7 @@
 
 html, body {
   /*background-color: #798190;*/
-  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+  background-color: var(--neutral-color);
   margin: 0 0;
   padding: 0;
   height: 100%;
