--- a/Lab 1/styles.css
+++ b/Lab 1/styles.css
@@ -45,3 +45,26 @@ img#corner-logo {
   border: none;
 }
 
+/* home page css */
+
+#personal-pages {
+   display: flex;
+   justify-content: center;
+   flex-direction: row;
+   flex-flow: row;
+}
+
+#personal-pages div {
+   width: 50px;
+   height: 50px;
+   margin: 0 50px;
+   background-color: red;
+}
+
+#personal-pages div img {
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+   object-fit: cover;
+   object-position: 0 0;
+}
