--- a/Lab 1/styles.css
+++ b/Lab 1/styles.css
@@ -8,7 +8,7 @@
 }
 
 html, body {
-  background-color: var(--light-color);
+  background-color: var(--neutral-color);
   margin: 0 0;
   padding: 0;
   height: 100%;
@@ -58,9 +58,10 @@ img#corner-logo {
    flex-flow: row;
 }
 
-#greeting {
+h1 {
    position: block;
    text-align: center;
+   color: var(--dark-color);
 }
 
 #personal-pages div {
@@ -75,5 +76,13 @@ img#corner-logo {
    overflow: hidden;
    object-fit: cover;
    object-position: 0 0;
-   border-radius: 10%;
+   border-radius: 10%;   
+   transform: scale(1,1);
+   transition: transform 100ms ease-in-out;
+   box-shadow: 0px 3px 15px rgba(0,0,0,0.5);
+}
+
+#personal-pages div img:hover {
+   cursor: pointer;
+   transform: scale(1.05,1.05);
 }
