--- a/Lab 1/styles.css
+++ b/Lab 1/styles.css
@@ -6,7 +6,8 @@
    --neutral-dark-color: #333e5b;
    --neutral-color: #798190;
    --neutral-light-color: #9d9683;
-   --light-color: #821122;
+   /* --light-color: #821122; */
+   --light-color: #fe303a;
 }
 
 *, *::before, *::after {
@@ -128,26 +129,19 @@ html, body {
 
 /* nav bar css */
 
-.nav-bar {
+header {
   width: 100%;
   height: 10%;
   position: relative;
-  /*background-color: red;*/
+  display: block;
+  background-color: var(--neutral-dark-color);
 }
 
-
-a.nav-bar {
-  float: left;
-  text-align: center;
-  /*padding: 10px;*/
-
-}
-
-img#corner-logo {
-  max-height: 100%;
-  width: 400px;
-  height: 400px;
-
+nav img {
+   max-height: 100%;
+   margin-left: 1em;
+   display: block;
+   position: absolute;
 }
 
 #personal-home {
@@ -164,6 +158,25 @@ img#corner-logo {
 /* end nav bar css */
 
 /* home page css */
+#hero {
+   display: flex;
+   justify-content: center;
+   align-content: center;
+   background-color: var(--light-color);
+   height: 100vh;
+}
+
+#hero img {
+   height: 90%
+}
+
+#hero h1 {
+   display: block;
+   position: absolute;
+   top: 70%;
+   font-size: 300%;
+   line-height: 90%;
+}
 
 #personal-pages {
    margin-top: 10vh;
@@ -171,6 +184,7 @@ img#corner-logo {
    justify-content: center;
    flex-direction: row;
    flex-flow: row;
+   text-align: center;
 }
 
 h1 {
