--- a/Lab 1/styles.css
+++ b/Lab 1/styles.css
@@ -36,6 +36,10 @@ html, body {
    width: 100%;
 }
 
+.text-center {
+   text-align: center;
+}
+
 /* universal styles end */
 
 /* connor resume css */
@@ -64,6 +68,11 @@ html, body {
    overflow: hidden;
    right: 0;
    top: 5%;
+}
+
+#resume .adr {
+   display: inline;
+   text-align: center;
 }
 
 #experience {
@@ -179,18 +188,12 @@ nav img {
 }
 
 #personal-pages {
-   margin-top: 10vh;
+   margin: 10vh 0 30vh;
    display: flex;
    justify-content: center;
    flex-direction: row;
    flex-flow: row;
    text-align: center;
-}
-
-h1 {
-   position: block;
-   text-align: center;
-   color: var(--dark-color);
 }
 
 #personal-pages div {
@@ -205,7 +208,7 @@ h1 {
    overflow: hidden;
    object-fit: cover;
    object-position: 0 0;
-   border-radius: 10%;   
+   border-radius: 10%;
    transform: scale(1,1);
    transition: transform 100ms ease-in-out;
    box-shadow: 0px 3px 15px rgba(0,0,0,0.5);
@@ -214,6 +217,29 @@ h1 {
 #personal-pages div img:hover {
    cursor: pointer;
    transform: scale(1.05,1.05);
+}
+
+#previous-works {
+   display: flex;
+   position: relative;
+   top: -15%;
+   align-content: center;
+   flex-direction: row;
+   flex-flow: row;
+}
+
+#previous-works div {
+   max-width: 30vw;
+   max-height: 20vw;
+   margin: 20vh 2vw;
+   text-align: center;
+}
+#previous-works div img {
+   width: 100%;
+   max-height: 100%;
+   overflow: hidden;
+   object-fit: cover;
+   object-position: 0 0;
 }
 
 /* end home page css */
