--- a/Lab 1/styles.css
+++ b/Lab 1/styles.css
@@ -9,7 +9,7 @@
 
 html, body {
   /*background-color: #798190;*/
-  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+  background-size: cover;
   margin: 0 0;
   padding: 0;
   height: 100%;
@@ -46,3 +46,101 @@ img#corner-logo {
   border: none;
 }
 
+#jasmine h1{
+text-align: center;
+border-style: solid;
+}
+
+h2{
+  font-size:19px;
+  text-align: center;
+  margin-top: 2em;
+
+}
+
+#contact{
+  font-size: small;
+}
+
+/*.fn{
+  border-style: solid;
+}*/
+
+#center {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
+#center img{
+  border-style: solid;
+}
+
+
+
+#jasmine p{
+  text-align: center;
+}
+
+#jasmine a {
+  text-align: center;
+ 
+}
+
+.bold {
+  font-weight: bold;
+}
+
+#jasmine #contact{
+  display: inline-block;
+  text-align: center;
+}
+
+#jasmine .contact .email{
+  display: inline-block;
+  text-align: center;
+}
+
+
+#jasmine #name{
+  font-weight: bold;
+  font-size: 18px;
+}
+
+#jasmine .resume p {
+  font-weight: bold;
+}
+
+#jasmine .work{
+  font-weight: bold;
+  font-style: italic;
+}
+
+#jasmine .assistant{
+  font-weight: bold;
+  font-style: italic;
+}
+
+#jasmine .title {
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+}
+
+
+#jasmine .titles{
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+
+}
+
+#jasmine .manager{
+  font-weight: bold;
+  font-style: italic;
+}
+
+#jasmine .club{
+  font-weight: bold;
+  font-style: italic;
+}
