Added more notes.
These notes explained in detail what some of the lines mean.

--- a/Lab 1/styles.css
+++ b/Lab 1/styles.css
@@ -375,6 +375,7 @@ body{
 /* end Alana Barth Resume */
 
 /*the start of Jasmine Filawo's resume*/
+/*made sure to include the jasmine id that the css style only applies to my resume page*/
 #jasmine h1{
 text-align: center;
 border-style: solid;
